fix(Header.jsx) fix - header clipping when change size to smaller

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -4,7 +4,7 @@
 	flex-direction: row; 
 	align-items: flex-end;
 	position: absolute;
- 	width: 100vw;
+ 	width: 100%;
   height: 5rem;
 	z-index: 2; 
 	background: lightpink;
