--- a/src/styles/mainView.css
+++ b/src/styles/mainView.css
@@ -1,7 +1,7 @@
 /* ================= Main-view ============== */
 .main-view-container {
-	height: 100vh;
-	width: 100vw;
+	height: 100%;
+	width: 100%;
 	min-height: 610px;
 	min-width: 540px;
 	display: flex;
